syntax = "proto2";

package asr;

option java_package = "com.google.audio.asr";
option java_outer_classname = "CloudSpeechSessionObserverParamsProto";
option java_multiple_files = true;

message CloudSpeechStreamObserverParams {
  // When true, hypotheses are held a bit longer until they likely will not
  // change again before being displayed.
  optional bool reject_unstable_hypotheses = 1;
}
